--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,6 +94,11 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
+
+              <!-- <li class="nav-item">
+                <a class="nav-link" target="_blank" href="/assets/pdf/cv.pdf">Resume</a>
+              </li> -->
+
               {%- if site.enable_darkmode %}
 
               <!-- Toogle theme mode -->
