--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,5 @@
-
-          <div class="publications">
-            {% bibliography -f papers -q @*[selected=true]* %}
-          </div>
+<br/>
+<h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Research</a></h2>
+<div class="publications">
+  {% bibliography -f papers -q @*[selected=true]* %}
+</div>
